// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAIReasoningSchemaCompatLayer > ZodIntersection > should handle chained .and().and() (three-way merge) 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "person": {
      "allOf": [
        {
          "additionalProperties": false,
          "properties": {
            "name": {
              "type": "string",
            },
          },
          "required": [
            "name",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "age": {
              "type": "number",
            },
          },
          "required": [
            "age",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "email": {
              "type": "string",
            },
          },
          "required": [
            "email",
          ],
          "type": "object",
        },
      ],
    },
  },
  "required": [
    "person",
  ],
  "type": "object",
}
`;

exports[`OpenAIReasoningSchemaCompatLayer > ZodIntersection > should handle intersection inside a parent object 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "label": {
      "type": "string",
    },
    "metadata": {
      "allOf": [
        {
          "additionalProperties": false,
          "properties": {
            "key": {
              "type": "string",
            },
          },
          "required": [
            "key",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "value": {
              "type": "number",
            },
          },
          "required": [
            "value",
          ],
          "type": "object",
        },
      ],
    },
  },
  "required": [
    "metadata",
    "label",
  ],
  "type": "object",
}
`;

exports[`OpenAIReasoningSchemaCompatLayer > ZodIntersection > should handle intersection nested inside a union (allOf inside anyOf) 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "locate": {
      "additionalProperties": false,
      "properties": {
        "prompt": {
          "anyOf": [
            {
              "type": "string",
            },
            {
              "allOf": [
                {
                  "additionalProperties": false,
                  "properties": {
                    "prompt": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "prompt",
                  ],
                  "type": "object",
                },
                {
                  "additionalProperties": false,
                  "properties": {
                    "convertHttpImage2Base64": {
                      "type": "boolean",
                    },
                    "images": {
                      "items": {
                        "additionalProperties": false,
                        "properties": {
                          "name": {
                            "type": "string",
                          },
                          "url": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "name",
                          "url",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "required": [
                    "images",
                    "convertHttpImage2Base64",
                  ],
                  "type": "object",
                },
              ],
            },
          ],
        },
      },
      "required": [
        "prompt",
      ],
      "type": "object",
    },
  },
  "required": [
    "locate",
  ],
  "type": "object",
}
`;

exports[`OpenAIReasoningSchemaCompatLayer > ZodIntersection > should handle optional intersection wrapper 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "data": {
      "allOf": [
        {
          "additionalProperties": false,
          "properties": {
            "a": {
              "type": "string",
            },
          },
          "required": [
            "a",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "b": {
              "type": "number",
            },
          },
          "required": [
            "b",
          ],
          "type": "object",
        },
      ],
    },
  },
  "type": "object",
}
`;
